# udemy_c_course

./: README.md
udemy_c_course/: CMakeLists.txt  main.c
udemy_c_course/include/: ex14_sequential_search.h  ex15_binary_search.h  ex1_pay_raise.h  ex2_time_converter.h  ex3_trapezium_area.h  ex4_length_of_hypotenuse.h  ex5_next_grade.h  ex6_classify_numbers.h  menu.h
udemy_c_course/src/: ex14_sequential_search.c  ex15_binary_search.c  ex1_pay_raise.c  ex2_time_converter.c  ex3_trapezium_area.c  ex4_length_of_hypotenuse.c  ex5_next_grade.c  ex6_classify_numbers.c  menu.c
